--- a/BlockchainETN/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/BlockchainETN/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -18,7 +18,7 @@
         </a>
       </li>
       <li [routerLinkActive]='["link-active"]'>
-        <a [routerLink]='["/fetch-data"]' (click)='collapse()'>
+        <a [routerLink]='["/services-dashboard"]' (click)='collapse()'>
           <span class='glyphicon glyphicon-th-list'></span> Eaton Services Dashboard
         </a>
       </li>
