--- a/BlockchainETN/ClientApp/src/app/manufacturing-dashboard/manufacturing-dashboard.component.html
+++ b/BlockchainETN/ClientApp/src/app/manufacturing-dashboard/manufacturing-dashboard.component.html
@@ -3,7 +3,7 @@
 <div class='container-fluid'>
   <div class='row border card'>
     <div class="card-header">
-      Asset Activity
+      Manufacturing Dashboard
       <!--<button class="btn btn-primary" (click)="RunSpinner()">Click to spin</button>-->
     </div>
     <div class="card-body">
@@ -15,20 +15,6 @@
         <button class="btn btn-primary" (click)="SearchOrders()">Search</button>
       </div>
       <div class="col-sm-12">
-
-
-        <!--<div class="col-sm-3">
-
-        </div>
-        <div class="col-sm-3">
-
-        </div>
-        <div class="col-sm-3">
-
-        </div>
-        <div class="col-sm-3">
-
-        </div>-->
       </div>
     </div>
   </div>
