--- a/BlockchainETN/ClientApp/src/app/services-dashboard/services-dashboard.component.html
+++ b/BlockchainETN/ClientApp/src/app/services-dashboard/services-dashboard.component.html
@@ -9,6 +9,11 @@
     <div class="card-body">
       <div class="col-sm-12">
         <button class="btn btn-primary" (click)="SearchOrders()">Refresh</button>
+
+        <button name="danger" (click)="ToggleCreateRandomServiceIssue()"
+                class="btn btn-danger float-right">
+          Show Create Service Issue
+        </button>
       </div>
       <div class="col-sm-12">
 
@@ -33,10 +38,15 @@
       <div class="btn-group">
 
         <button name="options" id="option1" (click)="AllWarranty=true;FilterOrders()"
-                 [ngClass]="AllWarranty === true ? 'btn-primary' : 'btn-secondary'"> All Warranty Orders</button>
+                [ngClass]="AllWarranty === true ? 'btn-primary' : 'btn-secondary'">
+          All Warranty Orders
+        </button>
         <button name="options" id="option2" (click)="AllWarranty=false;FilterOrders()"
-                 [ngClass]="AllWarranty === false ? 'btn-primary' : 'btn-secondary'"> Service Requested Orders</button>
+                [ngClass]="AllWarranty === false ? 'btn-primary' : 'btn-secondary'">
+          Service Requested Orders
+        </button>
       </div>
+
     </div>
     <div class="card-body">
       <div class="col-sm-12">
@@ -93,6 +103,16 @@
             </ng-template>
             <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
               {{row['OrderServiceDate']}}
+            </ng-template>
+          </ngx-datatable-column>
+          <ngx-datatable-column name="Service Action" *ngIf="ShowRandomServiceIssue">
+            <ng-template let-column="column" let-sort="sortFn" ngx-datatable-header-template>
+              <span (click)="sort()">{{column.name}}</span>
+            </ng-template>
+            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+              <button type="button" class="btn-primary" (click)="CreateRandomServiceIssue(row)">
+                Create Issue
+              </button>
             </ng-template>
           </ngx-datatable-column>
         </ngx-datatable>
