getting ready for demo, hiding analytics dash

--- a/BlockchainETN/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/BlockchainETN/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -22,11 +22,11 @@
           <span class='glyphicon glyphicon-th-list'></span> Eaton Services Dashboard
         </a>
       </li>
-      <li [routerLinkActive]='["link-active"]'>
-        <a [routerLink]='["/fetch-data"]' (click)='collapse()'>
+      <!--<li [routerLinkActive]='["link-active"]'>
+        <a [routerLink]='["/analytics-dashboard"]' (click)='collapse()'>
           <span class='glyphicon glyphicon-th-list'></span> Eaton Analytics Dashboard
         </a>
-      </li>
+      </li>-->
       <!--<li [routerLinkActive]='["link-active"]'>
         <a [routerLink]='["/fetch-data"]' (click)='collapse()'>
           <span class='glyphicon glyphicon-th-list'></span> Fetch data
