--- a/BlockchainETN/ClientApp/src/app/planning-dashboard/planning-dashboard.component.html
+++ b/BlockchainETN/ClientApp/src/app/planning-dashboard/planning-dashboard.component.html
@@ -3,7 +3,7 @@
 <div class='container-fluid'>
   <div class='row border card'>
     <div class="card-header">
-      Asset Activity
+      Planning Dashboard
       <!--<button class="btn btn-primary" (click)="RunSpinner()">Click to spin</button>-->
     </div>
     <div class="card-body">
@@ -12,23 +12,10 @@
         <select [(ngModel)]="SelectedTimespan" class="mb-1 mt-2" name="timespan">
           <option *ngFor="let c of Timespans" [ngValue]="c">{{c.name}}</option>
         </select>
-        <button class="btn btn-primary" (click)="SearchOrders()">Search</button>
+        <button class="btn btn-primary" (click)="SearchTransactions()">Search</button>
       </div>
       <div class="col-sm-12">
 
-
-        <!--<div class="col-sm-3">
-
-  </div>
-  <div class="col-sm-3">
-
-  </div>
-  <div class="col-sm-3">
-
-  </div>
-  <div class="col-sm-3">
-
-  </div>-->
       </div>
     </div>
   </div>
@@ -49,13 +36,12 @@
                       [selected]="selected"
                       [selectionType]="'checkbox'"
                       [limit]="10"
-                      (select)='onRowSelect($event)'
-                     >    
+                      (select)='onRowSelect($event)'>    
         </ngx-datatable>
       </div>
       <br/>
       <div class="col-xs-12">
-        <button class="btn btn-primary" (click)="changeStatus()">Acknowledge Order</button>
+          <button class="btn btn-primary" (click)="changeStatus()">Acknowledge Order</button>
       </div>
     </div>
   </div>
