--- a/BlockchainETN/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/BlockchainETN/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -22,12 +22,12 @@
           <span class='glyphicon glyphicon-th-list'></span> Eaton Services Dashboard
         </a>
       </li>
-      <!--<li [routerLinkActive]='["link-active"]'>
+      <li [routerLinkActive]='["link-active"]'>
         <a [routerLink]='["/analytics-dashboard"]' (click)='collapse()'>
           <span class='glyphicon glyphicon-th-list'></span> Eaton Analytics Dashboard
         </a>
-      </li>-->
-      <!--<li [routerLinkActive]='["link-active"]'>
+      </li>
+      <!-->li [routerLinkActive]='["link-active"]'>
         <a [routerLink]='["/fetch-data"]' (click)='collapse()'>
           <span class='glyphicon glyphicon-th-list'></span> Fetch data
         </a>
