--- a/BlockchainETN/ClientApp/src/app/analytics-dashboard/analytics-dashboard.component.css
+++ b/BlockchainETN/ClientApp/src/app/analytics-dashboard/analytics-dashboard.component.css
@@ -2,3 +2,15 @@
   margin-left: -10px;
   z-index: 1;
 }
+.container {
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  grid-gap: 20px;
+}
+.card {
+  margin: 0;
+}
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+}
